<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark_blue_2"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHombre"
        android:layout_width="170dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/dark_blue_1"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_margin="10dp"
                android:src="@drawable/male_icon" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textAllCaps="true"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMujer"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/dark_blue_1"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvHombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:src="@drawable/female_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textAlignment="center"
                android:textAllCaps="true" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/dark_blue_1"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvHombre"
        app:layout_constraintVertical_bias="0.04">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/altura"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvAltura"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                tools:text="@string/alturaInicial"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyMaterialTheme"
                android:valueFrom="1"
                android:valueTo="200"
                app:labelBehavior="gone"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPeso"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/dark_blue_1"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAltura"
        app:layout_constraintVertical_bias="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/peso"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                tools:text="@string/valor_cero"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/butPesoMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/light_purple"
                    android:src="@drawable/minus_icon"
                    android:layout_alignParentStart="true"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/butPesoPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/light_purple"
                    android:src="@drawable/plus_icon"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdad"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/dark_blue_1"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvPeso"
        app:layout_constraintTop_toBottomOf="@+id/cvAltura"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/edad"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="@string/valor_cero" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/butEdadMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="@color/light_purple"
                    android:layout_gravity="center"
                    android:src="@drawable/minus_icon" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/butEdadPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/light_purple"
                    android:layout_gravity="center"
                    android:src="@drawable/plus_icon" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvComplexion"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/dark_blue_1"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPeso"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/complexi_n"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvComplexion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                tools:text="Ejemplo"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsComplexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyMaterialTheme"
                android:valueTo="3"
                app:labelBehavior="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/butCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/light_purple"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvComplexion"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>